# fuzz-init

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPROVEMENTS_SUMMARY.md  LIBADM_INTEGRATION.md  Makefile  README.md  TEMPLATING.md  TODO.md  install.sh  test-build.sh
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/workflows/: README.md  auto-release.yml  ci.yml  full-test.yml  quick-test.yml  release.yml  test-flag.yml
scripts/: pre-commit.sh  release.sh  validate-yaml.py
src/: cli.rs  dev_mode.rs  github_fetcher.rs  main.rs  template_processor.rs  types.rs
src/templates/CPP/: CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  POST_GENERATION_MESSAGE.md  TUTORIAL.md  analyze_project.sh  build.sh  fuzz.sh  template.toml
src/templates/CPP/cmake/: Fuzzing.cmake
src/templates/CPP/fuzz/: CMakeLists.txt  CMakePresets.json  Dockerfile  INTEGRATION.md  Makefile  Mayhemfile  README.md  build.sh  configure.sh  fuzz.sh
src/templates/CPP/fuzz/cmake/: afl.cmake  hongfuzz.cmake  honggfuzz.cmake  libfuzzer.cmake  standalone.cmake
src/templates/CPP/fuzz/driver/: main.c  main.cpp
src/templates/CPP/fuzz/src/: {{project_name}}.cpp  {{target_name}}.cpp
src/templates/CPP/include/: lib.h  mylib.h
src/templates/CPP/src/: lib.c  lib.cpp  main.c  main.cpp  mylib.cpp
src/templates/CPP/test/: CMakeLists.txt  Makefile  test_lib.cpp
src/templates/CPP/test_data/: invalid.nmea
src/templates/c/: CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  TUTORIAL.md  build.sh  fuzz.sh  template.toml
src/templates/c/examples/: simple_parser.c
src/templates/c/fuzz/: CMakeLists.txt  CMakePresets.json  INTEGRATION.md  Makefile  Mayhemfile  README.md  build.sh
src/templates/c/fuzz/cmake/: afl.cmake  honggfuzz.cmake  libfuzzer.cmake  standalone.cmake
src/templates/c/fuzz/driver/: main.c
src/templates/c/fuzz/src/: {{target_name}}.c
src/templates/c/fuzz/testsuite/{{target_name}}/: demo_crash.txt
src/templates/c/include/: gps.h  lib.h
src/templates/c/src/: gps.c  main.c
src/templates/c/test/: test_lib.c
src/templates/c/test_data/: divide_by_zero.nmea  integer_overflow.nmea  oob_read.nmea  valid.nmea
src/templates/cpp/: template.toml
src/templates/cpp/fuzz/: Dockerfile  build.sh
src/templates/cpp/fuzz/dictionaries/: {{target_name}}.dict
src/templates/cpp/fuzz/driver/: afl_driver.cpp
src/templates/python/: main.txt  template.toml
src/templates/rust/: main.txt  template.toml
